--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1084,3 +1084,12 @@ ListVentaTitle_fecCobro=FecCobro
 ListVentaTitle_monto=Monto
 ListVentaTitle_estatus=Estatus
 ListVentaTitle_ordenId=OrdenId
+
+
+
+
+
+
+
+VentaMesTitle=Venta por Mes
+VentaMesEmpty=No hay venta
