Se modifica pagina principal para que muestre los indicadores y se agregan paginas de venta por distribuidor y graficas (vacias)

--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1093,3 +1093,5 @@ ListVentaTitle_ordenId=OrdenId
 
 VentaMesTitle=Venta por Mes
 VentaMesEmpty=No hay venta
+VentaDistribuidorTitle=Venta por distribuidor
+VentaGraficasTitle=Graficas
