corrección a menu e index

--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1088,10 +1088,19 @@ ListVentaTitle_ordenId=OrdenId
 
 
 
+GraficasTitle=Gr\u00e1ficas
 
-
-
+VentaTitle=Ventas
 VentaMesTitle=Venta por Mes
 VentaMesEmpty=No hay venta
-VentaDistribuidorTitle=Venta por distribuidor
-VentaGraficasTitle=Graficas
+VentaDistribuidorTitle=Venta por Distribuidor
+VentaCompararTitle=Comparar Distribuidor
+
+CompraTitle=Compras
+CompraMesTitle= Venta por Mes
+CompraComponenteTitle=Venta por Componente
+CompraProveedorTitle=Venta por Proveedor
+
+PendienteCobrarTitle = Pendiente por Cobrar
+PendienteProducirTitle = Pendiente por Producir
+InventarioTitle = Inventario
