se agrega metodo de obtener venta del distribuidor y de comparar distribuidores. Se modifican las 3 vistas de venta y se le agrega ajax.
Se agrego metodo de obtener lista de distribuidores para los combos en el clienteFacade

--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1095,6 +1095,10 @@ VentaMesTitle=Venta por Mes
 VentaMesEmpty=No hay venta
 VentaDistribuidorTitle=Venta por Distribuidor
 VentaCompararTitle=Comparar Distribuidor
+ListSalesMonth_mes=Mes
+ListSalesMonth_total=Total
+ListSalesDistributor_distribuidor=Distribuidor
+ListSalesDistributor_total=Total
 
 CompraTitle=Compras
 CompraMesTitle= Venta por Mes
