Se borraron archivos de vista innecesarios. Se añadió la estructura de las vistas que se va a utilizar.

--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1090,6 +1090,9 @@ ListVentaTitle_ordenId=OrdenId
 
 GraficasTitle=Gr\u00e1ficas
 
+TotalesMes=Totales del Mes
+TotalesA\u00f1o=Totales del A\u00f1o
+
 VentaTitle=Ventas
 VentaMesTitle=Venta por Mes
 VentaMesEmpty=No hay venta
