se agregan metodos para obtener la compra por mes, proveedor y componente. se crean vistas para los reportes de compras, se agregan filtros y etiqueta sobre lo que se esta buscando se crean objetos para manejar los resultados de los reportes

--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1104,9 +1104,12 @@ ListSalesDistributor_distribuidor=Distribuidor
 ListSalesDistributor_total=Total
 
 CompraTitle=Compras
-CompraMesTitle= Venta por Mes
-CompraComponenteTitle=Venta por Componente
-CompraProveedorTitle=Venta por Proveedor
+CompraMesTitle= Compras por Mes
+CompraComponenteTitle=Compras por Componente
+CompraProveedorTitle=Compras por Proveedor
+ListPurchasesSupplier_supplier=Proveedor
+ListPurchasesComponent_component=Componente
+
 
 PendienteCobrarTitle = Pendiente por Cobrar
 PendienteProducirTitle = Pendiente por Producir
