--- a/FinanzasBGX.Web/nbproject/project.properties
+++ b/FinanzasBGX.Web/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.google-charts-jsf-1.1-SNAPSHOT.jar=/Users/robertogarza/Downloads/google-charts-jsf-1.1-SNAPSHOT.jar
 file.reference.primefaces-4.0.jar=/Users/robertogarza/Downloads/primefaces-4.0.jar
 includes=**
 j2ee.compile.on.save=true
@@ -43,7 +44,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${file.reference.primefaces-4.0.jar}
+    ${file.reference.primefaces-4.0.jar}:\
+    ${file.reference.google-charts-jsf-1.1-SNAPSHOT.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
