--- a/FinanzasBGX.Web/nbproject/project.properties
+++ b/FinanzasBGX.Web/nbproject/project.properties
@@ -28,6 +28,9 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.google-charts-jsf-1.1-SNAPSHOT.jar=libs/google-charts-jsf-1.1-SNAPSHOT.jar
+file.reference.joda-time-2.3.jar=libs/joda-time-2.3.jar
+file.reference.primefaces-4.0.jar=libs/primefaces-4.0.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -42,7 +45,10 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    \# Space-separated list of extra javac options
+    \# Space-separated list of extra javac options:\
+    ${file.reference.google-charts-jsf-1.1-SNAPSHOT.jar}:\
+    ${file.reference.primefaces-4.0.jar}:\
+    ${file.reference.joda-time-2.3.jar}
 javac.compilerargs=
 javac.debug=true
 javac.deprecation=false
