-Graficas de Venta actualizadas -Graficas de Compra actualizadas

--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1088,7 +1088,8 @@ ListVentaTitle_ordenId=OrdenId
 
 
 
-GraficasTitle=Gr\u00e1ficas
+GraficaActualTitle=Gr\u00e1fica (a\u00f1o actual)
+GraficaHistoricaTitle=Gr\u00e1fica Hist\u00f3rica
 
 TotalesMes=Totales del Mes
 TotalesA\u00f1o=Totales del A\u00f1o
