- Cambio a Grafica Actual e Historica de Venta

--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1088,7 +1088,7 @@ ListVentaTitle_ordenId=OrdenId
 
 
 
-GraficaActualTitle=Gr\u00e1fica (a\u00f1o actual)
+GraficaActualTitle=Gr\u00e1fica por Mes
 GraficaHistoricaTitle=Gr\u00e1fica Hist\u00f3rica
 
 TotalesMes=Totales del Mes
