Se agrega pendiente por cobrar

--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1114,5 +1114,8 @@ ListPurchasesComponent_component=Componente
 ListPurchasesMonth_total=Comprado
 
 PendienteCobrarTitle = Pendiente por Cobrar
+ListPurchasesMonth_total=Comprado
+ListPendienteCobrar_total=Pendiente por cobrar
+
 PendienteProducirTitle = Pendiente por Producir
 InventarioTitle = Inventario
