Se agrega pendiente por producir

--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1118,4 +1118,6 @@ ListPurchasesMonth_total=Comprado
 ListPendienteCobrar_total=Pendiente por cobrar
 
 PendienteProducirTitle = Pendiente por Producir
+ListPendienteProducir_total=Pendiente por producir
+
 InventarioTitle = Inventario
