--- a/FinanzasBGX.Web/src/java/Bundle.properties
+++ b/FinanzasBGX.Web/src/java/Bundle.properties
@@ -1121,3 +1121,4 @@ PendienteProducirTitle = Pendiente por Producir
 ListPendienteProducir_total=Pendiente por producir
 
 InventarioTitle = Inventario
+ListInventario_total=Cantidad
